engine/scripting/native_api/dse_api.h

// ============================================================
// Context Setup — 引擎初始化时调用一次
// ============================================================

DSE_CAPI void dse_native_api_init(
    void* world,           // World*
    void* asset_manager,   // AssetManager*
    void* audio_system,    // AudioSystem* (可为 nullptr)
    void  (*quit_fn)(void),
    void  (*set_title_fn)(const char*),
    float (*get_fps_fn)(void),
    void  (*set_fps_fn)(float),
    int   (*get_draw_calls_fn)(void)   // 可为 nullptr
);
DSE_CAPI void  dse_ui_set_label_font(uint32_t e, const char* font_id, float font_size);
DSE_CAPI void  dse_ui_set_position(uint32_t e, float x, float y);
DSE_CAPI void  dse_ui_set_size(uint32_t e, float w, float h);
DSE_CAPI void  dse_ui_set_anchor(uint32_t e, float ax, float ay);
DSE_CAPI void  dse_ui_set_color(uint32_t e, float r, float g, float b, float a);
DSE_CAPI void  dse_ui_set_visible(uint32_t e, int visible);
DSE_CAPI int   dse_ui_is_hovered(uint32_t e);
DSE_CAPI int   dse_ui_is_pressed(uint32_t e);
DSE_CAPI void  dse_ui_add_joystick(uint32_t e, float max_radius, int follow_pointer,
                                   int reset_on_release);
DSE_CAPI float dse_ui_get_joystick_x(uint32_t e);
DSE_CAPI float dse_ui_get_joystick_y(uint32_t e);
DSE_CAPI void  dse_ui_add_slider(uint32_t e, float min_value, float max_value,
                                 float value, int whole_numbers);
DSE_CAPI void  dse_ui_set_slider_value(uint32_t e, float value);
DSE_CAPI float dse_ui_get_slider_value(uint32_t e);
DSE_CAPI void  dse_ui_add_toggle(uint32_t e, int is_on, int group);
DSE_CAPI void  dse_ui_set_toggle(uint32_t e, int is_on);
DSE_CAPI int   dse_ui_get_toggle(uint32_t e);
DSE_CAPI void  dse_ui_add_progress_bar(uint32_t e, float value, float max_value);
DSE_CAPI void  dse_ui_set_progress(uint32_t e, float value);
DSE_CAPI float dse_ui_get_progress(uint32_t e);
DSE_CAPI void  dse_ui_add_text_input(uint32_t e, const char* placeholder,
                                     int max_length, int is_password);
DSE_CAPI void  dse_ui_set_text_input_text(uint32_t e, const char* text);
DSE_CAPI int   dse_ui_get_text_input_text(uint32_t e, char* out, int cap);
DSE_CAPI void  dse_ui_set_text_input_focus(uint32_t e, int focused);
// UI 布局文件加载（UISerializer）。返回创建的实体数（写入 out_entities，最多 cap 个）。
DSE_CAPI int   dse_ui_load_from_file(const char* path, uint32_t* out_entities, int cap);
DSE_CAPI int   dse_ui_load_from_json(const char* json, uint32_t* out_entities, int cap);
// ============================================================
// Extended Context Setup — 扩展上下文（metrics 回调 + floating origin）
// ============================================================

DSE_CAPI void dse_native_api_init_ext(
    int   (*get_max_batch_sprites_fn)(void),
    int   (*get_sprite_count_fn)(void),
    int   (*get_gpu_driven_active_fn)(void),
    int   (*get_gpu_indirect_draw_count_fn)(void),
    int   (*get_gpu_total_instances_fn)(void),
    void* floating_origin);
// ============================================================
// Input 扩展（Screen / Gamepad buttons / Touch / Mouse extras）
// ============================================================

DSE_CAPI float dse_input_get_screen_width(void);
DSE_CAPI float dse_input_get_screen_height(void);
DSE_CAPI int   dse_input_is_gamepad_connected(int gamepad_id);
DSE_CAPI void  dse_input_set_gamepad_dead_zone(float zone);
DSE_CAPI float dse_input_get_gamepad_dead_zone(void);
DSE_CAPI float dse_input_get_mouse_scroll_dx(void);
DSE_CAPI float dse_input_get_mouse_scroll_dy(void);
DSE_CAPI int   dse_input_get_mouse_middle(void);
DSE_CAPI int   dse_input_get_mouse_middle_down(void);
DSE_CAPI int   dse_input_get_mouse_left_double_click(void);
DSE_CAPI int   dse_input_get_mouse_left_long_press(float duration);
DSE_CAPI float dse_input_get_mouse_swipe_dx(void);
DSE_CAPI float dse_input_get_mouse_swipe_dy(void);
DSE_CAPI int   dse_input_get_device_shake(void);
DSE_CAPI int   dse_input_get_touch_count(void);
DSE_CAPI int   dse_input_get_touch(int index, float* out_x, float* out_y, int* out_phase);
// ============================================================
// App / Time 扩展
// ============================================================

DSE_CAPI float dse_app_get_time_since_startup(void);
DSE_CAPI void  dse_app_set_time_scale(float scale);
DSE_CAPI float dse_app_get_time_scale(void);
DSE_CAPI float dse_app_get_fps(void);
DSE_CAPI float dse_app_get_frame_time_ms(void);
// ============================================================
// Metrics 扩展
// ============================================================

DSE_CAPI int   dse_metrics_get_max_batch_sprites(void);
DSE_CAPI int   dse_metrics_get_sprite_count(void);
DSE_CAPI int   dse_metrics_get_gpu_driven_active(void);
DSE_CAPI int   dse_metrics_get_gpu_indirect_draw_count(void);
DSE_CAPI int   dse_metrics_get_gpu_total_instances(void);
DSE_CAPI float dse_metrics_get_fps(void);
DSE_CAPI float dse_metrics_get_frame_time_ms(void);
// ============================================================
// Floating Origin
// ============================================================

DSE_CAPI void  dse_origin_get_accumulated(float* out_x, float* out_y, float* out_z);
DSE_CAPI void  dse_origin_to_absolute(float lx, float ly, float lz, float* out_x, float* out_y, float* out_z);
DSE_CAPI void  dse_origin_to_local(float ax, float ay, float az, float* out_x, float* out_y, float* out_z);
DSE_CAPI void  dse_origin_set_rebase_threshold(float threshold);
DSE_CAPI float dse_origin_get_rebase_threshold(void);
// ============================================================
// Physics3D 扩展（Collision/Trigger events, SphereCast, BoxCast, Sleep/Wake, Kinematic, Mass, Damping）
// ============================================================
// collision_events: 每个事件 11 floats (type, entity_a, entity_b, px,py,pz, nx,ny,nz, impulse, pad)
//                   写入 out_buf（cap 个 float），返回实际事件数
DSE_CAPI int dse_physics3d_get_collision_count(void);
DSE_CAPI int dse_physics3d_get_collision_events(float* out_buf, int cap);
DSE_CAPI int dse_physics3d_get_trigger_count(void);
DSE_CAPI int dse_physics3d_get_trigger_events(uint32_t* out_entities, int* out_types, int cap);
DSE_CAPI int dse_physics3d_spherecast(float ox, float oy, float oz,
                                      float dx, float dy, float dz,
                                      float radius, float max_dist,
                                      uint32_t* out_entity, float* out_point,
                                      float* out_normal, float* out_distance);
DSE_CAPI int dse_physics3d_boxcast(float ox, float oy, float oz,
                                   float dx, float dy, float dz,
                                   float hx, float hy, float hz,
                                   float max_dist,
                                   uint32_t* out_entity, float* out_point,
                                   float* out_normal, float* out_distance);
DSE_CAPI void dse_rigidbody3d_set_kinematic(uint32_t e, int kinematic);
DSE_CAPI void  dse_rigidbody3d_add_force_at_position(uint32_t e, float fx, float fy, float fz,
                                                     float px, float py, float pz);
DSE_CAPI void  dse_rigidbody3d_set_linear_damping(uint32_t e, float damping);
DSE_CAPI float dse_rigidbody3d_get_linear_damping(uint32_t e);
DSE_CAPI void  dse_rigidbody3d_set_angular_damping(uint32_t e, float damping);
DSE_CAPI float dse_rigidbody3d_get_angular_damping(uint32_t e);
// ============================================================
// Physics2D（Box2D 集成）
// ============================================================

DSE_CAPI void dse_physics2d_add_rigidbody(uint32_t e, int type, float gravity_scale, int fixed_rotation);
DSE_CAPI void dse_physics2d_set_rigidbody_velocity(uint32_t e, float vx, float vy);
DSE_CAPI void dse_physics2d_add_box_collider(uint32_t e, float w, float h,
                                              float density, float friction, float restitution);
DSE_CAPI void dse_physics2d_set_box_collider_trigger(uint32_t e, int is_trigger);