GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_ui_set_label_font", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ui_set_label_font(uint e, string fontId, float fontSize);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_position")]
    internal static partial void dse_ui_set_position(uint e, float x, float y);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_size")]
    internal static partial void dse_ui_set_size(uint e, float w, float h);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_anchor")]
    internal static partial void dse_ui_set_anchor(uint e, float ax, float ay);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_color")]
    internal static partial void dse_ui_set_color(uint e, float r, float g, float b, float a);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_visible")]
    internal static partial void dse_ui_set_visible(uint e, int visible);

    [LibraryImport(Lib, EntryPoint = "dse_ui_is_hovered")]
    internal static partial int dse_ui_is_hovered(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_is_pressed")]
    internal static partial int dse_ui_is_pressed(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_joystick")]
    internal static partial void dse_ui_add_joystick(uint e, float maxRadius, int followPointer, int resetOnRelease);

    [LibraryImport(Lib, EntryPoint = "dse_ui_get_joystick_x")]
    internal static partial float dse_ui_get_joystick_x(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_get_joystick_y")]
    internal static partial float dse_ui_get_joystick_y(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_slider")]
    internal static partial void dse_ui_add_slider(uint e, float minValue, float maxValue, float value, int wholeNumbers);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_slider_value")]
    internal static partial void dse_ui_set_slider_value(uint e, float value);

    [LibraryImport(Lib, EntryPoint = "dse_ui_get_slider_value")]
    internal static partial float dse_ui_get_slider_value(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_toggle")]
    internal static partial void dse_ui_add_toggle(uint e, int isOn, int group);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_toggle")]
    internal static partial void dse_ui_set_toggle(uint e, int isOn);

    [LibraryImport(Lib, EntryPoint = "dse_ui_get_toggle")]
    internal static partial int dse_ui_get_toggle(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_progress_bar")]
    internal static partial void dse_ui_add_progress_bar(uint e, float value, float maxValue);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_progress")]
    internal static partial void dse_ui_set_progress(uint e, float value);

    [LibraryImport(Lib, EntryPoint = "dse_ui_get_progress")]
    internal static partial float dse_ui_get_progress(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_text_input", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ui_add_text_input(uint e, string placeholder, int maxLength, int isPassword);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_text_input_text", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ui_set_text_input_text(uint e, string text);

    [LibraryImport(Lib, EntryPoint = "dse_ui_get_text_input_text")]
    internal static partial int dse_ui_get_text_input_text(uint e, [Out] byte[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_text_input_focus")]
    internal static partial void dse_ui_set_text_input_focus(uint e, int focused);

    [LibraryImport(Lib, EntryPoint = "dse_ui_load_from_file", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_ui_load_from_file(string path, [Out] uint[] outEntities, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_ui_load_from_json", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_ui_load_from_json(string json, [Out] uint[] outEntities, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_screen_width")]
    internal static partial float dse_input_get_screen_width();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_screen_height")]
    internal static partial float dse_input_get_screen_height();

    [LibraryImport(Lib, EntryPoint = "dse_input_is_gamepad_connected")]
    internal static partial int dse_input_is_gamepad_connected(int gamepadId);

    [LibraryImport(Lib, EntryPoint = "dse_input_set_gamepad_dead_zone")]
    internal static partial void dse_input_set_gamepad_dead_zone(float zone);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_gamepad_dead_zone")]
    internal static partial float dse_input_get_gamepad_dead_zone();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_scroll_dx")]
    internal static partial float dse_input_get_mouse_scroll_dx();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_scroll_dy")]
    internal static partial float dse_input_get_mouse_scroll_dy();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_middle")]
    internal static partial int dse_input_get_mouse_middle();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_middle_down")]
    internal static partial int dse_input_get_mouse_middle_down();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_left_double_click")]
    internal static partial int dse_input_get_mouse_left_double_click();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_left_long_press")]
    internal static partial int dse_input_get_mouse_left_long_press(float duration);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_swipe_dx")]
    internal static partial float dse_input_get_mouse_swipe_dx();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_swipe_dy")]
    internal static partial float dse_input_get_mouse_swipe_dy();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_device_shake")]
    internal static partial int dse_input_get_device_shake();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_touch_count")]
    internal static partial int dse_input_get_touch_count();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_touch")]
    internal static partial int dse_input_get_touch(int index, out float outX, out float outY, out int outPhase);

    [LibraryImport(Lib, EntryPoint = "dse_app_get_time_since_startup")]
    internal static partial float dse_app_get_time_since_startup();

    [LibraryImport(Lib, EntryPoint = "dse_app_set_time_scale")]
    internal static partial void dse_app_set_time_scale(float scale);

    [LibraryImport(Lib, EntryPoint = "dse_app_get_time_scale")]
    internal static partial float dse_app_get_time_scale();

    [LibraryImport(Lib, EntryPoint = "dse_app_get_fps")]
    internal static partial float dse_app_get_fps();

    [LibraryImport(Lib, EntryPoint = "dse_app_get_frame_time_ms")]
    internal static partial float dse_app_get_frame_time_ms();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_max_batch_sprites")]
    internal static partial int dse_metrics_get_max_batch_sprites();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_sprite_count")]
    internal static partial int dse_metrics_get_sprite_count();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_gpu_driven_active")]
    internal static partial int dse_metrics_get_gpu_driven_active();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_gpu_indirect_draw_count")]
    internal static partial int dse_metrics_get_gpu_indirect_draw_count();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_gpu_total_instances")]
    internal static partial int dse_metrics_get_gpu_total_instances();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_fps")]
    internal static partial float dse_metrics_get_fps();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_frame_time_ms")]
    internal static partial float dse_metrics_get_frame_time_ms();

    [LibraryImport(Lib, EntryPoint = "dse_origin_get_accumulated")]
    internal static partial void dse_origin_get_accumulated(out float outX, out float outY, out float outZ);

    [LibraryImport(Lib, EntryPoint = "dse_origin_to_absolute")]
    internal static partial void dse_origin_to_absolute(float lx, float ly, float lz, out float outX, out float outY, out float outZ);

    [LibraryImport(Lib, EntryPoint = "dse_origin_to_local")]
    internal static partial void dse_origin_to_local(float ax, float ay, float az, out float outX, out float outY, out float outZ);

    [LibraryImport(Lib, EntryPoint = "dse_origin_set_rebase_threshold")]
    internal static partial void dse_origin_set_rebase_threshold(float threshold);

    [LibraryImport(Lib, EntryPoint = "dse_origin_get_rebase_threshold")]
    internal static partial float dse_origin_get_rebase_threshold();

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_get_collision_count")]
    internal static partial int dse_physics3d_get_collision_count();

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_get_collision_events")]
    internal static partial int dse_physics3d_get_collision_events([Out] float[] outBuf, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_get_trigger_count")]
    internal static partial int dse_physics3d_get_trigger_count();

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_get_trigger_events")]
    internal static partial int dse_physics3d_get_trigger_events([Out] uint[] outEntities, [Out] int[] outTypes, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_spherecast")]
    internal static partial int dse_physics3d_spherecast(float ox, float oy, float oz, float dx, float dy, float dz, float radius, float maxDist, out uint outEntity, [Out] float[] outPoint, [Out] float[] outNormal, out float outDistance);

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_boxcast")]
    internal static partial int dse_physics3d_boxcast(float ox, float oy, float oz, float dx, float dy, float dz, float hx, float hy, float hz, float maxDist, out uint outEntity, [Out] float[] outPoint, [Out] float[] outNormal, out float outDistance);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_kinematic")]
    internal static partial void dse_rigidbody3d_set_kinematic(uint e, int kinematic);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_add_force_at_position")]
    internal static partial void dse_rigidbody3d_add_force_at_position(uint e, float fx, float fy, float fz, float px, float py, float pz);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_linear_damping")]
    internal static partial void dse_rigidbody3d_set_linear_damping(uint e, float damping);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_linear_damping")]
    internal static partial float dse_rigidbody3d_get_linear_damping(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_angular_damping")]
    internal static partial void dse_rigidbody3d_set_angular_damping(uint e, float damping);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_angular_damping")]
    internal static partial float dse_rigidbody3d_get_angular_damping(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_add_rigidbody")]
    internal static partial void dse_physics2d_add_rigidbody(uint e, int type, float gravityScale, int fixedRotation);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_rigidbody_velocity")]
    internal static partial void dse_physics2d_set_rigidbody_velocity(uint e, float vx, float vy);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_add_box_collider")]
    internal static partial void dse_physics2d_add_box_collider(uint e, float w, float h, float density, float friction, float restitution);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_box_collider_trigger")]
    internal static partial void dse_physics2d_set_box_collider_trigger(uint e, int isTrigger);
